--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 </head>
-<body ng-controller="MyCtrl">
+<body>
 
     <div class="container" style="width: 600px;">
         <header style="text-align: center;">
