--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <head lang="en">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-animate.js"></script>
+
+    <script type="text/javascript" src="owm-app.js"></script>
     <script src="myApp.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <meta charset="UTF-8">
     <title>Waitstaff Calculator
     </title>
@@ -19,7 +23,7 @@
                 <a ng-href="#/">Home</a> | <a ng-href="#/new-meal">New Meal</a> | <a ng-href="#/my-earnings">My Earnings</a>
             </nav>
         </header>
-        <div ng-view></div>
+        <div ng-view class="animate-view"></div>
     </div>
 </body>
 </html>
